[package]
name = "raydium-swap-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
solana-client = "2.1.13"
solana-program = "2.1.13"
solana-transaction-status-client-types = "2.1.13"
solana-sdk = "2.1.13"
anyhow = "1.0.95"
base64 = "0.13.0"
futures-util = "0.3.31"
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
futures = "0.3.31"
tokio-util = { version = "0.7.8", features = ["rt"] }
